refactor: better response func
