# api/controller/course/add_course_controller.go
@@ -4,7 +4,6 @@ import (
 	"be/bootstrap"
 	"be/db/sqlc"
 	"be/internal"
-	"be/model"
 
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
@@ -19,10 +18,10 @@ type CreateCourseRequest struct {
 	CourseYear       int32     `json:"course_year" binding:"required,min=2000,max=2100"`
 	CourseSemester   int32     `json:"course_semester" binding:"required,oneof=1 2 3"`
 	CourseStartShift int32     `json:"course_start_shift" binding:"required,min=1,max=10"`
-	CourseEndShift   int32     `json:"course_end_shift" binding:"required,min=1,max=10,gtfield=CourseStartShift"`
+	CourseEndShift   int32     `json:"course_end_shift" binding:"required,min=1,max=10"`
 	CourseDay        sqlc.Day  `json:"course_day" binding:"required,oneof=Monday Tuesday Wednesday Thursday Friday Saturday Sunday"`
 	MaxEnroll        int32     `json:"max_enroll" binding:"required,min=1,max=1000"`
-	CurrentEnroll    int32     `json:"current_enroll" binding:"required,min=0,maxfield=MaxEnroll"`
+	CurrentEnroll    int32     `json:"current_enroll" binding:"required,min=0,max=1000"`
 	CourseRoom       string    `json:"course_room" binding:"required,min=2,max=50"`
 }
 
@@ -37,7 +36,7 @@ type CreateCourseRequest struct {
 // @Failure 400 {object} model.Response
 // @Failure 403 {object} model.Response
 // @Failure 500 {object} model.Response
-// @Security ApiKeyAuth
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
 // @Router /course/create [post]
 func CreateCourse(c *gin.Context, app *bootstrap.App) {
 	sess, _ := c.Get("session")
@@ -46,10 +45,17 @@ func CreateCourse(c *gin.Context, app *bootstrap.App) {
 	// request validation
 	req := CreateCourseRequest{}
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(400, model.Response{
-			Status:  false,
-			Message: err.Error(),
-		})
+		internal.Respond(c, 400, false, err.Error(), nil)
+		return
+	}
+
+	if req.CurrentEnroll > req.MaxEnroll {
+		internal.Respond(c, 400, false, "Current enroll must be less than max enroll", nil)
+		return
+	}
+
+	if req.CourseStartShift >= req.CourseEndShift {
+		internal.Respond(c, 400, false, "Course start shift must be less than course end shift", nil)
 		return
 	}
 
@@ -57,19 +63,13 @@ func CreateCourse(c *gin.Context, app *bootstrap.App) {
 	user, err := app.DB.GetUserById(c, session.UserID)
 	if err != nil {
 		app.Logger.Error().Err(err).Msg(err.Error())
-		c.JSON(500, model.Response{
-			Status:  false,
-			Message: "Internal server error",
-		})
+		internal.Respond(c, 500, false, "Internal server error", nil)
 		return
 	}
 
 	// check user role
 	if user.UserRole != sqlc.RoleAdmin {
-		c.JSON(403, model.Response{
-			Status:  false,
-			Message: "Permission denied",
-		})
+		internal.Respond(c, 403, false, "Permission denied", nil)
 		return
 	}
 
@@ -94,16 +94,9 @@ func CreateCourse(c *gin.Context, app *bootstrap.App) {
 
 	if err != nil {
 		app.Logger.Error().Err(err).Msg(err.Error())
-		c.JSON(500, model.Response{
-			Status:  false,
-			Message: "Internal server error",
-		})
+		internal.Respond(c, 500, false, "Internal server error", nil)
 		return
 	}
 
-	c.JSON(200, model.Response{
-		Status:  true,
-		Message: "Course created",
-		Data:    course,
-	})
+	internal.Respond(c, 200, true, "Course created", course)
 }
