# docs/swagger.json
@@ -6,11 +6,6 @@
     "paths": {
         "/course/create": {
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Create course",
                 "consumes": [
                     "application/json"
@@ -31,6 +26,14 @@
                         "schema": {
                             "$ref": "#/definitions/course.CreateCourseRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -512,6 +515,7 @@
                 },
                 "current_enroll": {
                     "type": "integer",
+                    "maximum": 1000,
                     "minimum": 0
                 },
                 "max_enroll": {
